Port extension to Firefox

--- a/src/popup/popup.scss
+++ b/src/popup/popup.scss
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  font-family: sans-serif;
 
   iframe {
     margin-bottom: -5px;
@@ -13,11 +14,11 @@ body {
     }
 
     .title {
-      font-size: 1.3em;
+      font-size: 15px;
     }
 
     .subtitle {
-      font-size: 1.1em;
+      font-size: 13px;
     }
 
     a {
